--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "learno",
+    "name": "Learno",
     "slug": "learno",
     "privacy": "public",
     "sdkVersion": "34.0.0",
