--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "electron-to-chromium": "^1.3.243",
     "expo": "^34.0.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-web": "^0.11.4"
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-tab-view": "^2.10.0",
+    "react-native-web": "^0.11.4",
+    "react-navigation": "^1.5.11"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
