--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Learno",
-    "slug": "learno",
+    "name": "Marvel Hero",
+    "slug": "marvel-hero",
     "privacy": "public",
     "sdkVersion": "34.0.0",
     "platforms": [
@@ -11,9 +11,9 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/avengers-logo.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/avengers-logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
